# silk-codec-cpp

./: CMakeLists.txt  README.md  demo.cpp  silk_codec.cpp  silk_codec.h
silk/: CMakeLists.txt
